services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-test-front
  namespace: api-test-ns
  labels:
    app: api-test-front
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  selector:
    app: api-test-front
---
apiVersion: v1
kind: Service
metadata:
  name: api-test-back
  namespace: api-test-ns
  labels:
    app: api-test-back
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: api-test-back
---
