ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "api-test-ingress"
  namespace: "api-test-ns"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: api-test-ingress-last
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "api-test-front"
              servicePort: 80
